SQLSever adaptation and first migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-98d9cd5c-4695-4515-9dab-1eec4f3fcabf;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-98d9cd5c-4695-4515-9dab-1eec4f3fcabf;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=PC01\\SQLEXPRESS01;Database=saleswebmvcappdb;User ID=developer;Password=1234567;TrustServerCertificate=True;Trusted_Connection=False;Connection Timeout=30;Integrated Security=False;Persist Security Info=False;Encrypt=True;MultipleActiveResultSets=True;"
   }
 }
