--- a/SalesWebMvc/SalesWebMvc.csproj
+++ b/SalesWebMvc/SalesWebMvc.csproj
@@ -5,9 +5,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200421215142_Initial.cs" />
+    <Compile Remove="Migrations\20200421215142_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200421222504_teste2.cs" />
+    <Compile Remove="Migrations\20200421222504_teste2.Designer.cs" />
+    <Compile Remove="Migrations\20200422042037_teste1.cs" />
+    <Compile Remove="Migrations\20200422042037_teste1.Designer.cs" />
+    <Compile Remove="Migrations\20200422044722_teste3.cs" />
+    <Compile Remove="Migrations\20200422044722_teste3.Designer.cs" />
+    <Compile Remove="Migrations\20200422054856_teste4.cs" />
+    <Compile Remove="Migrations\20200422054856_teste4.Designer.cs" />
+    <Compile Remove="Migrations\20200422060150_teste5.cs" />
+    <Compile Remove="Migrations\20200422060150_teste5.Designer.cs" />
+    <Compile Remove="Migrations\20200422142331_teste7.cs" />
+    <Compile Remove="Migrations\20200422142331_teste7.Designer.cs" />
+    <Compile Remove="Migrations\20200422153454_teste8.cs" />
+    <Compile Remove="Migrations\20200422153454_teste8.Designer.cs" />
+    <Compile Remove="Migrations\20200422174327_Initial4.cs" />
+    <Compile Remove="Migrations\20200422174327_Initial4.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
